--- a/notebook/feature.ipynb
+++ b/notebook/feature.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.csv\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
@@ -24,9 +33,24 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f37f8c7e817cdba202adcb6971b617a0449f1863ebe08ec960c81b1421122875"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit ('feature': conda)",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
