computes score for features

--- a/notebook/feature.ipynb
+++ b/notebook/feature.ipynb
@@ -1697,11 +1697,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In univariate feature selection, we will use SelectKBest that removes all but the k highest scoring features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this method we need to choose how many features we will use. For example, will k (number of features) be 5 or 10 or 15? The answer is only trying or intuitively. I do not try all combinations but I only choose k = 5 and find best 5 features."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import chi2\n",
+    "# find best scored 5 features\n",
+    "select_feature = SelectKBest(chi2, k=5).fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score list: [6.06916433e+01 3.66899557e+04 1.00015175e-01 1.30547650e+01\n",
+      " 1.95982847e-01 3.42575072e-04 4.07131026e-02 6.12741067e+03\n",
+      " 1.32470372e-03 6.92896719e-01 1.39557806e-03 2.65927071e-03\n",
+      " 2.63226314e-01 2.58858117e+01 1.00635138e+00 1.23087347e-01]\n",
+      "Feature list: Index(['texture_mean', 'area_mean', 'smoothness_mean', 'concavity_mean',\n",
+      "       'symmetry_mean', 'fractal_dimension_mean', 'texture_se', 'area_se',\n",
+      "       'smoothness_se', 'concavity_se', 'symmetry_se', 'fractal_dimension_se',\n",
+      "       'smoothness_worst', 'concavity_worst', 'symmetry_worst',\n",
+      "       'fractal_dimension_worst'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Score list:', select_feature.scores_)\n",
+    "print('Feature list:', x_train.columns)"
+   ]
   }
  ],
  "metadata": {
