computes the best features

--- a/notebook/feature.ipynb
+++ b/notebook/feature.ipynb
@@ -1809,11 +1809,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3) Recursive feature elimination (RFE) with random forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basically, it uses one of the classification methods (random forest in our example), assign weights to each of features. Whose absolute weights are the smallest are pruned from the current set features. That procedure is recursively repeated on the pruned set until the desired number of features.\n",
+    "\n",
+    "### Like previous method, we will use 5 features. However, which 5 features will we use ? We will choose them with RFE method."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "# Create the RFE object and rank each pixel\n",
+    "clf_rf_3 = RandomForestClassifier()      \n",
+    "rfe = RFE(estimator=clf_rf_3, n_features_to_select=5, step=1)\n",
+    "rfe = rfe.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chosen best 5 feature by rfe: Index(['area_mean', 'concavity_mean', 'area_se', 'smoothness_worst',\n",
+      "       'concavity_worst'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Chosen best 5 feature by rfe:',x_train.columns[rfe.support_])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chosen 5 best features by rfe is texture_mean, area_mean, concavity_mean, area_se, concavity_worst. They are exactly similar with previous (selectkBest) method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4) Recursive feature elimination with cross validation and random forest classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we will not only find best features but we also find how many features do we need for best accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal number of features : 13\n",
+      "Best features : Index(['texture_mean', 'area_mean', 'smoothness_mean', 'concavity_mean',\n",
+      "       'fractal_dimension_mean', 'area_se', 'concavity_se', 'symmetry_se',\n",
+      "       'fractal_dimension_se', 'smoothness_worst', 'concavity_worst',\n",
+      "       'symmetry_worst', 'fractal_dimension_worst'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFECV\n",
+    "\n",
+    "# The \"accuracy\" scoring is proportional to the number of correct classifications\n",
+    "clf_rf_4 = RandomForestClassifier() \n",
+    "rfecv = RFECV(estimator=clf_rf_4, step=1, cv=5,scoring='accuracy')   #5-fold cross-validation\n",
+    "rfecv = rfecv.fit(x_train, y_train)\n",
+    "\n",
+    "print('Optimal number of features :', rfecv.n_features_)\n",
+    "print('Best features :', x_train.columns[rfecv.support_])"
+   ]
   }
  ],
  "metadata": {
