computes important number of features

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 29,
       "metadata": {
         "id": "z5suL7VspMzn"
       },
@@ -28,7 +28,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import f1_score,confusion_matrix\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.feature_selection import RFECV"
       ]
     },
     {
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +76,7 @@
         "le = LabelEncoder()\n",
         "data[\"diagnosis\"] = le.fit_transform(data[\"diagnosis\"])\n",
         "y = data.diagnosis                          # M or B \n",
-        "list = ['Unnamed: 32','id']\n",
+        "list = ['Unnamed: 32','id','diagnosis']\n",
         "x = data.drop(list,axis = 1 )"
       ]
     },
@@ -88,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -96,8 +97,49 @@
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42)\n",
         "\n",
         "#random forest classifier with n_estimators=10 (default)\n",
-        "clf_rf = RandomForestClassifier(random_state=43)      \n",
+        "clf_rf = RandomForestClassifier(n_estimators = 100,random_state=43)      \n",
         "clr_rf = clf_rf.fit(x_train,y_train)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### using Recursive feature elimination with cross validation and random forest classification, we will find how many features do we need for best accuracy."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Optimal number of features : 11\n",
+            "Best features : Index(['perimeter_mean', 'area_mean', 'concavity_mean', 'concave points_mean',\n",
+            "       'area_se', 'radius_worst', 'texture_worst', 'perimeter_worst',\n",
+            "       'area_worst', 'concavity_worst', 'concave points_worst'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# The \"accuracy\" scoring is proportional to the number of correct classifications\n",
+        "clf_rf_4 = RandomForestClassifier() \n",
+        "rfecv = RFECV(estimator=clf_rf_4, step=1, cv=5,scoring='accuracy')   #5-fold cross-validation\n",
+        "rfecv = rfecv.fit(x_train, y_train)\n",
+        "\n",
+        "print('Optimal number of features :', rfecv.n_features_)\n",
+        "print('Best features :', x_train.columns[rfecv.support_])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### so we will be using this number of feature for our causal graph"
       ]
     },
     {
