computes causal graph

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 55,
       "metadata": {
         "id": "z5suL7VspMzn"
       },
@@ -29,7 +29,9 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import f1_score,confusion_matrix\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.feature_selection import RFECV"
+        "from sklearn.feature_selection import RFECV\n",
+        "from sklearn.feature_selection import SelectKBest\n",
+        "from sklearn.feature_selection import chi2"
       ]
     },
     {
@@ -89,50 +91,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
         "# split data train 70 % and test 30 %\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42)\n",
-        "\n",
-        "#random forest classifier with n_estimators=10 (default)\n",
-        "clf_rf = RandomForestClassifier(n_estimators = 100,random_state=43)      \n",
-        "clr_rf = clf_rf.fit(x_train,y_train)"
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1, random_state=42)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### using Recursive feature elimination with cross validation and random forest classification, we will find how many features do we need for best accuracy."
+        "### using univariate feature selection, we will use SelectKBest that removes all but the k highest scoring features.."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# find best scored 8 features\n",
+        "select_feature = SelectKBest(chi2, k=8).fit(x_train, y_train)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Optimal number of features : 11\n",
-            "Best features : Index(['perimeter_mean', 'area_mean', 'concavity_mean', 'concave points_mean',\n",
-            "       'area_se', 'radius_worst', 'texture_worst', 'perimeter_worst',\n",
-            "       'area_worst', 'concavity_worst', 'concave points_worst'],\n",
+            "Score list: [2.34537862e+02 8.46171475e+01 1.77484577e+03 4.76672868e+04\n",
+            " 1.51026517e-01 4.96541930e+00 1.75324567e+01 9.43537070e+00\n",
+            " 2.76631367e-01 3.96257165e-06 3.18011479e+01 2.90948841e-04\n",
+            " 2.27721391e+02 7.93553164e+03 1.12490005e-03 5.62662568e-01\n",
+            " 9.29991444e-01 2.93945730e-01 9.36481631e-05 4.89781704e-03\n",
+            " 4.33623580e+02 1.59402611e+02 3.22741118e+03 9.94228172e+04\n",
+            " 3.99113116e-01 1.76988015e+01 3.53915891e+01 1.21674048e+01\n",
+            " 1.31136533e+00 2.11661786e-01]\n",
+            "Feature list: Index(['radius_mean', 'texture_mean', 'perimeter_mean', 'area_mean',\n",
+            "       'smoothness_mean', 'compactness_mean', 'concavity_mean',\n",
+            "       'concave points_mean', 'symmetry_mean', 'fractal_dimension_mean',\n",
+            "       'radius_se', 'texture_se', 'perimeter_se', 'area_se', 'smoothness_se',\n",
+            "       'compactness_se', 'concavity_se', 'concave points_se', 'symmetry_se',\n",
+            "       'fractal_dimension_se', 'radius_worst', 'texture_worst',\n",
+            "       'perimeter_worst', 'area_worst', 'smoothness_worst',\n",
+            "       'compactness_worst', 'concavity_worst', 'concave points_worst',\n",
+            "       'symmetry_worst', 'fractal_dimension_worst'],\n",
             "      dtype='object')\n"
           ]
         }
       ],
       "source": [
-        "# The \"accuracy\" scoring is proportional to the number of correct classifications\n",
-        "clf_rf_4 = RandomForestClassifier() \n",
-        "rfecv = RFECV(estimator=clf_rf_4, step=1, cv=5,scoring='accuracy')   #5-fold cross-validation\n",
-        "rfecv = rfecv.fit(x_train, y_train)\n",
-        "\n",
-        "print('Optimal number of features :', rfecv.n_features_)\n",
-        "print('Best features :', x_train.columns[rfecv.support_])"
+        "print('Score list:', select_feature.scores_)\n",
+        "print('Feature list:', x_train.columns)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "our best 8 features are ['radius_mean', 'texture_mean', 'perimeter_mean', 'area_mean',\n",
+        "       'smoothness_mean', 'compactness_mean', 'concavity_mean',\n",
+        "       'concave points_mean']"
       ]
     },
     {
@@ -140,6 +165,22 @@
       "metadata": {},
       "source": [
         "### so we will be using this number of feature for our causal graph"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#filter original dataset to retain the important features\n",
+        "#the dimension of the dataset has reduced from 569,32 to 569,9\n",
+        "stru_data = data [['diagnosis','area_mean', 'concavity_mean', 'concave points_mean', 'radius_worst',\n",
+        "       'perimeter_worst', 'area_worst', 'concavity_worst',\n",
+        "       'concave points_worst']]\n",
+        "stru_data.head()\n",
+        "sm = StructureModel()\n",
+        "sm = from_pandas(stru_data)"
       ]
     },
     {
@@ -154,19 +195,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 71,
       "metadata": {
         "id": "az3hW5zap-iH"
       },
       "outputs": [],
       "source": [
-        "sm = StructureModel()\n",
-        "sm = from_pandas(x)"
+        "sm = StructureModel()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### We can apply now the NOTEARS algorithm to learn the structure"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -183,7 +230,7 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         }
