--- a/notebook/EDA and Feature selection.ipynb
+++ b/notebook/EDA and Feature selection.ipynb
@@ -1864,17 +1864,6 @@
     "from sklearn.decomposition import PCA\n",
     "pca = PCA()\n",
     "X_train = pca.fit(x_train_N)\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "pca = PCA(n_components=3)\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "X_train = pca.fit_transform(X_train)\n",
-    "X_test = pca.transform(X_test)\n",
-    "\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
     "plt.figure(1, figsize=(14, 7))\n",
     "plt.clf()\n",
     "plt.axes([.2, .2, .7, .7])\n",
@@ -1912,20 +1901,12 @@
    "hash": "f37f8c7e817cdba202adcb6971b617a0449f1863ebe08ec960c81b1421122875"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('feature': conda)",
+   "display_name": "Python 3.7.0 64-bit ('feature': conda)",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": ""
   },
   "orig_nbformat": 4
  },
