modifies preprocess script

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -37,23 +37,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 28,
       "metadata": {
         "id": "FAGt2TDEpSZP"
       },
-      "outputs": [
-        {
-          "ename": "IndentationError",
-          "evalue": "expected an indented block (preprocess.py, line 32)",
-          "output_type": "error",
-          "traceback": [
-            "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-            "  File \u001b[1;32m\"/home/neba/.conda/envs/feature/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3441\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-79a301b63f23>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from preprocess import check_numeric, label_encode\u001b[0m\n",
-            "\u001b[0;36m  File \u001b[0;32m\"/home/neba/Desktop/Industry - Casualty Challenge/scripts/preprocess.py\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    df[col] = le.fit_transform(df[col])\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "sys.path.append(os.path.abspath(os.path.join('../scripts')))\n",
         "from preprocess import check_numeric, label_encode\n",
@@ -86,9 +74,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:preprocess:encodes label for non_numeric successfully\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -305,7 +300,7 @@
               "[5 rows x 30 columns]"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
