creates jaccard function

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -550,6 +550,98 @@
         "# draws graph of lassso regularized\n",
         "Image(viz.draw(format='png'))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Structure Review\n",
+        "## concavity affects  and area\n",
+        "## Radius affects perimeter and area,\n",
+        "\n",
+        "### the graph captures these relationships.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Jaccard's similarity index"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.316"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#similarity between a graph plotted without lasso regularization and one plotted with lasso regularization\n",
+        "def jaccard_similarity(g, h):\n",
+        "    i = set(g).intersection(h)\n",
+        "    return round(len(i) / (len(g) + len(h) - len(i)),3)\n",
+        "\n",
+        "jaccard_similarity(sm_constrained.edges(), sm_lasso.edges())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Using Union and intersection"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.3157894736842105"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def jaccar_score(g, h):    \n",
+        "    i = set(g).intersection(set(h))\n",
+        "    u = set(g).union(set(h))\n",
+        "    return len(i) / float(len(u))\n",
+        "jaccar_score(sm_constrained.edges(), sm_lasso.edges())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### The score and similarity are pretty much the same let us if we can increase this number. let us Split the data row wise and test the model as we increase the data "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_1 = causal_data.iloc[:100,:]\n",
+        "df_2 = causal_data.iloc[:300,:]\n",
+        "df_3 = causal_data.iloc[:,:]"
+      ]
     }
   ],
   "metadata": {
