modifies random forest script

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -47,6 +47,7 @@
         "from preprocess import check_numeric, label_encode\n",
         "from file_read import FileHandler\n",
         "from structure import Structure\n",
+        "from randomforest import RandomForest\n",
         "# from exploration import Exploration\n",
         "filehandler = FileHandler()\n",
         "structure = Structure()\n"
@@ -74,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -293,7 +294,7 @@
               "[5 rows x 30 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
