modify causal notebook

--- a/notebook/causal_model.ipynb
+++ b/notebook/causal_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 137,
       "metadata": {
         "id": "z5suL7VspMzn"
       },
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 138,
       "metadata": {
         "id": "FAGt2TDEpSZP"
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 139,
       "metadata": {
         "id": "GrPUsTCVphyZ"
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [
         {
@@ -309,7 +309,7 @@
               "[5 rows x 30 columns]"
             ]
           },
-          "execution_count": 81,
+          "execution_count": 140,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -333,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [
         {
@@ -359,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1061,7 +1061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -1085,7 +1085,7 @@
               "<IPython.core.display.Image object>"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 109,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1108,10 +1108,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 135,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "29-08-2021 16:17:38 - [ERROR] -  randomforest - (randomforest.py).randomforest(line 34) - train model.\n",
+            "NoneType: None\n",
+            "ERROR:randomforest:train model.\n",
+            "NoneType: None\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(random_state=43)"
+            ]
+          },
+          "execution_count": 135,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# let us train random forest model\n",
+        "random = RandomForest()\n",
+        "random.randomforest(df,x_train,y_train,)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### let us see the measure of how much all the variablles overfit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 143,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "accuracy() got an unexpected keyword argument 'path'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-143-740998f7c35e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../output/whole_data_Set'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: accuracy() got an unexpected keyword argument 'path'"
+          ]
+        }
+      ],
+      "source": [
+        "random.accuracy(df,x_train,y_train,x_test,y_test,path = '../output/whole_data_Set')"
+      ]
     }
   ],
   "metadata": {
